<?xml version="1.0"?>
<package>
  <name>cnn_msgs</name>
  <version>1.0.0</version>
  <description>CNN Data Package</description>
  <maintainer email="anhoangle296@gmail.com">anlehoang</maintainer>
  <license>MIT</license>
  <url type="website">https://github.com/lehoangan2906/drl-adapt-ros-noetic</url>
  <author email="anhoangle296@gmail.com">anlehoang</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>std_msgs</run_depend>
</package>
