<?xml version="1.0"?>
<package format="2">
  <name>cnn_msgs</name>
  <version>1.0.0</version>
  <description>The CNN Data Package</description>
  <maintainer email="anhoangle296@gmail.com">anlh</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
